- Estabilizacion Juez Virtual (81%)

--- a/NJLive/web/challenge/submit.xhtml
+++ b/NJLive/web/challenge/submit.xhtml
@@ -97,7 +97,10 @@
                             <h:outputText value="#{s.languageProgrammingMessage.nameProgramming}" />
                         </p:column>
                         <p:column headerText="Tiempo" width="8%" styleClass="text-center" >
-                            <h:outputText  value="#{s.timeUsed}" />
+                            <h:outputText value="#{s.timeUsed}" >
+                                <f:convertDateTime pattern="s.SSS" />
+                            </h:outputText>    
+
                         </p:column>
                         <p:column headerText="Fecha Envio" width="15%" styleClass="text-center" >
                             <h:outputText value="#{s.dateSubmit}" >
