--- a/NJWeb/web/modules/practice/contest/search.xhtml
+++ b/NJWeb/web/modules/practice/contest/search.xhtml
@@ -44,26 +44,32 @@
                                     </div>
                                 </p:outputPanel>
                             </f:facet>
-                            <p:column headerText="Id Competencia" width="30" filterBy="#{p.idChallenge}" filterStyle="display:none;" filterMatchMode="contains">
+                            <p:column headerText="Id Competencia" width="20" filterBy="#{p.idChallenge}"
+                                      filterStyle="display:none;" filterMatchMode="contains">
                                 <h:outputText value="#{utilBean.formatIdChallenge(p.idChallenge)}" />
                             </p:column>
-                            <p:column headerText="Nombre" width="100" filterBy="#{p.nameChallenge}" filterStyle="display:none;" filterMatchMode="contains">
+                            <p:column headerText="Nombre" width="100" filterBy="#{p.nameChallenge}"
+                                      filterStyle="display:none;" filterMatchMode="contains">
                                 <h:outputText value="#{p.nameChallenge}" />
                             </p:column>
-                            <p:column headerText="Fecha Inicio" width="100" filterBy="#{p.dateStart}" filterStyle="display:none;" filterMatchMode="contains">
+                            <p:column headerText="Fecha Inicio" width="100" filterBy="#{p.dateStart}"
+                                      filterStyle="display:none;" filterMatchMode="contains">
                                 <h:outputText value="#{p.dateStart}" >
                                     <f:convertDateTime pattern="dd MMM yyyy - HH:mm:ss" />
                                 </h:outputText>
                             </p:column>
-                            <p:column headerText="Fecha Finalizacion" width="100" filterBy="#{p.dateEnd}" filterStyle="display:none;" filterMatchMode="contains">
+                            <p:column headerText="Fecha Finalizacion" width="100" filterBy="#{p.dateEnd}"
+                                      filterStyle="display:none;" filterMatchMode="contains">
                                 <h:outputText value="#{p.dateEnd}" >
                                     <f:convertDateTime pattern="dd MMM yyyy - HH:mm:ss" />
                                 </h:outputText>
                             </p:column>
-                            <p:column headerText="Descripcion" width="180" filterStyle="display:none;" filterMatchMode="contains">
+                            <p:column headerText="Descripcion" width="180" filterStyle="display:none;"
+                                      filterMatchMode="contains">
                                 <h:outputText value="#{p.description}" />
                             </p:column>
-                            <p:column headerText="Problemas" width="20" filterStyle="display:none;" filterMatchMode="contains">
+                            <p:column headerText="Problemas" width="20" filterStyle="display:none;"
+                                      filterMatchMode="contains">
                                 <h:outputText value="#{p.problemMessages.size()}" />
                             </p:column>
                             <p:column headerText="Ver" width="40" style="text-align: center !important;" >
